@@ -5,7 +5,7 @@ import java.util.Random;
 import java.util.Scanner;
 import java.util.concurrent.ExecutionException;
 import com.github.scribejava.apis.FacebookApi;
-import com.github.scribejava.core.builder.ServiceBuilderAsync;
+import com.github.scribejava.core.builder.ServiceBuilder;
 import com.github.scribejava.core.model.ForceTypeOfHttpRequest;
 import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthRequestAsync;
@@ -33,7 +33,7 @@ public abstract class FacebookAsyncExample {
                 .setReadTimeout(1_000)
                 .build();
 
-        final OAuth20Service service = new ServiceBuilderAsync()
+        final OAuth20Service service = new ServiceBuilder()
                 .apiKey(clientId)
                 .apiSecret(clientSecret)
                 .state(secretState)
