@@ -1,16 +1,131 @@
 package com.github.scribejava.core.builder;
 
+import com.github.scribejava.core.builder.api.BaseApi;
 import com.github.scribejava.core.model.OAuthConfig;
+import java.io.OutputStream;
+import com.github.scribejava.core.model.OAuthConstants;
+import com.github.scribejava.core.model.SignatureType;
 import com.github.scribejava.core.oauth.OAuthService;
 import com.github.scribejava.core.utils.Preconditions;
+import com.ning.http.client.AsyncHttpClientConfig;
 
 /**
  * Implementation of the Builder pattern, with a fluent interface that creates a {@link OAuthService}
  */
-public class ServiceBuilder extends AbstractServiceBuilder<ServiceBuilder> {
+public class ServiceBuilder {
 
+    private String callback;
+    private String apiKey;
+    private String apiSecret;
+    private String scope;
+    private String state;
+    private SignatureType signatureType;
+    private OutputStream debugStream;
+    private String grantType;
+    private String responseType = "code";
+
+    //sync version only
     private Integer connectTimeout;
     private Integer readTimeout;
+
+    //async version only
+    private AsyncHttpClientConfig asyncHttpClientConfig;
+    private String asyncHttpProviderClassName;
+
+    public ServiceBuilder() {
+        callback = OAuthConstants.OUT_OF_BAND;
+        signatureType = SignatureType.Header;
+    }
+
+    /**
+     * Adds an OAuth callback url
+     *
+     * @param callback callback url. Must be a valid url or 'oob' for out of band OAuth
+     * @return the {@link ServiceBuilder} instance for method chaining
+     */
+    public ServiceBuilder callback(String callback) {
+        Preconditions.checkNotNull(callback, "Callback can't be null");
+        this.callback = callback;
+        return this;
+    }
+
+    /**
+     * Configures the api key
+     *
+     * @param apiKey The api key for your application
+     * @return the {@link ServiceBuilder} instance for method chaining
+     */
+    public ServiceBuilder apiKey(String apiKey) {
+        Preconditions.checkEmptyString(apiKey, "Invalid Api key");
+        this.apiKey = apiKey;
+        return this;
+    }
+
+    /**
+     * Configures the api secret
+     *
+     * @param apiSecret The api secret for your application
+     * @return the {@link ServiceBuilder} instance for method chaining
+     */
+    public ServiceBuilder apiSecret(String apiSecret) {
+        Preconditions.checkEmptyString(apiSecret, "Invalid Api secret");
+        this.apiSecret = apiSecret;
+        return this;
+    }
+
+    /**
+     * Configures the OAuth scope. This is only necessary in some APIs (like Google's).
+     *
+     * @param scope The OAuth scope
+     * @return the {@link ServiceBuilder} instance for method chaining
+     */
+    public ServiceBuilder scope(String scope) {
+        Preconditions.checkEmptyString(scope, "Invalid OAuth scope");
+        this.scope = scope;
+        return this;
+    }
+
+    /**
+     * Configures the anti forgery session state. This is available in some APIs (like Google's).
+     *
+     * @param state The OAuth state
+     * @return the {@link ServiceBuilder} instance for method chaining
+     */
+    public ServiceBuilder state(String state) {
+        Preconditions.checkEmptyString(state, "Invalid OAuth state");
+        this.state = state;
+        return this;
+    }
+
+    /**
+     * Configures the signature type, choose between header, querystring, etc. Defaults to Header
+     *
+     * @param signatureType SignatureType
+     * @return the {@link ServiceBuilder} instance for method chaining
+     */
+    public ServiceBuilder signatureType(SignatureType signatureType) {
+        Preconditions.checkNotNull(signatureType, "Signature type can't be null");
+        this.signatureType = signatureType;
+        return this;
+    }
+
+    public ServiceBuilder debugStream(OutputStream debugStream) {
+        Preconditions.checkNotNull(debugStream, "debug stream can't be null");
+        this.debugStream = debugStream;
+        return this;
+    }
+
+    public ServiceBuilder grantType(String grantType) {
+        Preconditions.checkEmptyString(grantType, "Invalid OAuth grantType");
+        this.grantType = grantType;
+        return this;
+    }
+
+    public ServiceBuilder responseType(String responseType) {
+        Preconditions.checkEmptyString(responseType, "Invalid OAuth responseType");
+        this.responseType = responseType;
+        return this;
+    }
 
     public ServiceBuilder connectTimeout(Integer connectTimeout) {
         Preconditions.checkNotNull(connectTimeout, "Connection timeout can't be null");
@@ -24,12 +139,39 @@ public class ServiceBuilder extends AbstractServiceBuilder<ServiceBuilder> {
         return this;
     }
 
-    @Override
-    protected OAuthConfig createConfig() {
-        super.checkPreconditions();
-        final OAuthConfig config = new OAuthConfig(getApiKey(), getApiSecret(), getCallback(), getSignatureType(),
-                getScope(), getDebugStream(), connectTimeout, readTimeout, getGrantType(), getState(),
-                getResponseType());
-        return config;
+    public ServiceBuilder asyncHttpClientConfig(AsyncHttpClientConfig asyncHttpClientConfig) {
+        Preconditions.checkNotNull(asyncHttpClientConfig, "asyncHttpClientConfig can't be null");
+        this.asyncHttpClientConfig = asyncHttpClientConfig;
+        return this;
+    }
+
+    public ServiceBuilder asyncHttpProviderClassName(String asyncHttpProviderClassName) {
+        this.asyncHttpProviderClassName = asyncHttpProviderClassName;
+        return this;
+    }
+
+    public ServiceBuilder debug() {
+        debugStream(System.out);
+        return this;
+    }
+
+    public void checkPreconditions() {
+        Preconditions.checkEmptyString(apiKey, "You must provide an api key");
+    }
+    private OAuthConfig createConfig() {
+        checkPreconditions();
+        return new OAuthConfig(apiKey, apiSecret, callback, signatureType, scope, debugStream, grantType, state,
+                responseType, connectTimeout, readTimeout, asyncHttpClientConfig, asyncHttpProviderClassName);
+    }
+
+    /**
+     * Returns the fully configured {@link S}
+     *
+     * @param <S> OAuthService implementation (OAuth1/OAuth2/any API specific)
+     * @param api will build Service for this API
+     * @return fully configured {@link S}
+     */
+    public <S extends OAuthService> S build(BaseApi<S> api) {
+        return api.createService(createConfig());
     }
 }
